Fixed responsiveness issue on small screen devices

--- a/resources/sass/_headings.scss
+++ b/resources/sass/_headings.scss
@@ -6,7 +6,7 @@
   h2 {
     font-family: "Montserrat", sans-serif;
     background: #fff;
-    padding: 0 50px;
+    padding: 0 37px;
     display: inline-block;
     font-size: 2em;
     margin: 0;
